# signal-modulation

./: CMakeLists.txt  README.md  TASK.md
include/: common.hpp
src/: common.cpp  main.cpp  main.py
